--- a/clientjobhistory.htm
+++ b/clientjobhistory.htm
@@ -231,7 +231,7 @@ height: 30px;
   <a href="#">Work/Inspection Form</a>
   <a href="#">Job - Office History</a>
   <a href="#">Job - Field History</a>
-  <a href="#">Client - Job History</a>
+  <a href="https://lt47.github.io/Advance-Crane/clientjobhistory.htm">Client - Job History</a>
 </div>
 
 <button class="openbtn" onclick="openNav()">☰</button>  
