--- a/jobfieldhistory.htm
+++ b/jobfieldhistory.htm
@@ -230,7 +230,7 @@ height: 30px;
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
   <a href="#">Work/Inspection Form</a>
   <a href="#">Job - Office History</a>
-  <a href="#">Job - Field History</a>
+  <a href="https://lt47.github.io/Advance-Crane/jobfieldhistory.htm">Job - Field History</a>
   <a href="https://lt47.github.io/Advance-Crane/clientjobhistory.htm">Client - Job History</a>
 </div>
 
