--- a/clientjobhistory.htm
+++ b/clientjobhistory.htm
@@ -228,8 +228,8 @@ height: 30px;
 </div>
 <div id="mySidepanel" class="sidepanel">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-  <a href="#">Work/Inspection Form</a>
-  <a href="#">Job - Office History</a>
+  <a href="https://lt47.github.io/Advance-Crane/workform.htm">Work/Inspection Form</a>
+  <a href="https://lt47.github.io/Advance-Crane/jobofficehistory.htm">Job - Office History</a>
   <a href="https://lt47.github.io/Advance-Crane/jobfieldhistory.htm">Job - Field History</a>
   <a href="https://lt47.github.io/Advance-Crane/clientjobhistory.htm">Client - Job History</a>
 </div>
