--- a/workform.htm
+++ b/workform.htm
@@ -2383,12 +2383,16 @@ $submitx = $('#myBtn1').on('click', function(e) {
     <td>Client Name:<input style="font-size:23px;" id="clientname" name="clientname" type="text"/></td>
     <td>Initials:<input style="font-size:23px;" id="clientinitials" name="clientinitials" type="text"/></td>
   </tr>
+     <tr id="divider">
+    <td></td>
+    <td></td>
+  </tr>
+  <tr>
+  <td></td>
+  <td>Stop Time: <input style="font-size:23px;" type="time" name="stoptime" id="stoptime"></td>
+  </tr>
   </table><br><br><br><br>
-  
-  <div style="display:none" id="stoptimediv">
-  <label><font size="5">Stop Time: <input style="font-size:23px;" type="time" name="stoptime" id="stoptime"></font></label>
-  </div><br><br>
-  
+
  <b><button class="submitbutton" id="submit-form" type="submit">Submit</button> </b> 
   </center>
   <script>
