--- a/workform.htm
+++ b/workform.htm
@@ -2387,8 +2387,28 @@ $submitx = $('#myBtn1').on('click', function(e) {
     <td></td>
     <td></td>
   </tr>
+    <tr>
+    <td>Safety Tear Down</td>
+  </tr>
   <tr>
-  <td></td>
+    <td>Please check to indicate you have done the following before leaving the job site</td>
+  </tr>
+  <tr>
+    <td><input id="toolsrigging" class=largerCheckbox type="checkbox">All tools and rigging has been removed and accounted for.</td>
+  </tr>
+  <tr>
+    <td><input id="safetybarricades" class=largerCheckbox type="checkbox">All safety barricades, cones and marking tape has been removed and is accounted for.</td>
+  </tr>
+  <tr>
+    <td><input id="lockremoval" class=largerCheckbox type="checkbox">All locks have been removed.</td>
+  </tr>
+  <tr>
+    <td><input id="partsandmaterial" class=largerCheckbox type="checkbox">All material and parts have been removed and any required clean-up of the crane or lift is complete.</td>
+  </tr>
+  <tr>
+    <td><input id="clientcheck" class=largerCheckbox type="checkbox">The client has been informed that the job is complete and is satisfied.</td>
+  </tr>
+  <tr>
   <td>Stop Time: <input style="font-size:23px;" type="time" name="stoptime" id="stoptime"></td>
   </tr>
   </table><br><br><br><br>
