--- a/inspectionform.htm
+++ b/inspectionform.htm
@@ -351,7 +351,7 @@ function closeNav() {
 <center>
 <div id="info1">
   <td><br><br>
-   <button class="button" style="font-size:40px;"style="font-size:35px;" id="myBtn2" type="button" onclick="showjobnum();">Back</button><br><br>
+   <button class="button" style="font-size:40px;"style="font-size:35px;" id="myBtn2" type="button" onclick="window.location.href = 'https://lt47.github.io/Advance-Crane/jobnum.htm';">Back</button><br><br>
 
 <font size="8">Job Number:<br> <input class="buttontext" id="jobnumber" name="jobnumber" oninput="displayjobnum" type="text" style="font-size:35px" disabled/></font>
 </td><br><br>&nbsp;&nbsp;
