--- a/jobofficehistory.htm
+++ b/jobofficehistory.htm
@@ -224,7 +224,7 @@ height: 30px;
 </head>
 <body>
 <div>
-<center><img src="https://drive.google.com/uc?id=1Wq8ZyGez9quqC8tgmHf9nGks5_OZqh6y"  top=35px right=125px height=60 width=75/></center><br>
+<center><a href="https://lt47.github.io/Advance-Crane/jobnum.htm"><img src="https://drive.google.com/uc?id=1Wq8ZyGez9quqC8tgmHf9nGks5_OZqh6y"  top=35px right=125px height=60 width=75/></a></center><br>
 </div>
 <div id="mySidepanel" class="sidepanel">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
