--- a/inspectionform.htm
+++ b/inspectionform.htm
@@ -5,6 +5,10 @@
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="Expires" content="-1" />
 <title></title>
+   
+<script>
+window.location.reload(true);
+   </script>
 
 
 <script>
