--- a/inspectionform.htm
+++ b/inspectionform.htm
@@ -7,7 +7,11 @@
 <title></title>
    
 <script>
-window.location.reload(true);
+function refresh() {    
+    setTimeout(function () {
+        window.location.reload(true)
+    }, 100);
+}
    </script>
 
 
