--- a/inspectionform.htm
+++ b/inspectionform.htm
@@ -7,11 +7,9 @@
 <title></title>
    
 <script>
-function refresh() {    
-    setTimeout(function () {
+   window.addEventListener('load',function () {
         window.location.reload(true)
-    }, 100);
-}
+    });
    </script>
 
 
