--- a/inspectionform.htm
+++ b/inspectionform.htm
@@ -7,9 +7,9 @@
 <title></title>
    
 <script>
-   window.addEventListener('load',function () {
+   window.addEventListener('load',setTimeout(function () {
         window.location.reload(true)
-    });
+    },100));
    </script>
 
 
