--- a/inspectionform.htm
+++ b/inspectionform.htm
@@ -11,6 +11,7 @@
     setTimeout(function () {
         window.location.reload(true)
     }, 100);
+      document.getElementById("click").style.display = "none";
 }
    </script>
 
