--- a/inspectionform.htm
+++ b/inspectionform.htm
@@ -3,7 +3,7 @@
 <meta charset="utf-8"  content="width=device-width, initial-scale=1"> 
 <meta http-equiv="cache-control" content="no-cache" />
 <meta http-equiv="Pragma" content="no-cache" />
-<meta http-equiv="Expires" content="-1" />
+<meta http-equiv="Expires" content="Tue, 01 Jan 1980 1:00:00 GMT" />
 <title></title>
    
 <script>
