--- a/inspectionform.htm
+++ b/inspectionform.htm
@@ -486,7 +486,7 @@ function closeNav() {
 <center>
 <label><font size="8">Start Time: <input style="font-size:35px;" type="time" name="starttime" id="starttime"></font></label><br><br><br>
   
-  <label><font size="8">Description of work completed: <textarea rows="20" cols="50" style="font-size:35px;" type="text" name="description-entry" id="description-entry"></textarea></font></label><br><br>
+  <label><font size="8">Description of work completed:<br> <textarea rows="20" cols="50" style="font-size:35px;" type="text" name="description-entry" id="description-entry"></textarea></font></label><br><br>
   <label><font size="8">Parts:<br> <textarea rows="20" cols="50" style="font-size:35px;" type="text" name="parts-entry" id="parts-entry"></textarea></font></label><br><br>
   <label><font size="8">Equipment:<br> <textarea rows="20" cols="50" style="font-size:35px;" type="text" name="equipment-entry" id="equipment-entry"></textarea></font></label>
   <br><br><br>
