--- a/jobnum.htm
+++ b/jobnum.htm
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>     
 <meta charset="utf-8"  content="width=device-width, initial-scale=1"> 
+<link rel="stylesheet" type="text/css" href="https://lt47.github.io/Advance-Crane/advancestyle.css">
 <title></title>
 <script>
 function loadData() {
@@ -130,234 +131,6 @@ var jobnuminput = document.getElementById("jobnumber1").value;
 }
 </script>
 
-<style>
-<!-- body {font-family: Arial, Helvetica, sans-serif;} --> body {font-family: "Lato", sans-serif;} .sidenav {
-  height: 100%;
-  width: 125px;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  background-color: #4a4a4a;
-  overflow-x: hidden;
-  padding-top: 20px;
-  font-size: 1.3em;
-}
-
-.main {font-size: 1.2em;
-}
-
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  font-size: 35px;
-}
-td, th {
-  border: 1px solid #dddddd;
-  text-align: center;
-  padding: 8px;
-  font-size: 40px;
-}
-
-.modal { 
-  position: fixed; 
-  z-index: 1; 
-  left: 0;
-  top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
-  padding-top: 60px;
-  font-size: 1.1em;
-}
-
-input[type="text"]
-{
-    font-size:35px;
-}
-
-input[type="button"]
-{
-    font-size:40px;
-}
-
-select
-{
-    font-size:13px;
-}
-table tr#divider  {background-color:#000000;}
-table tr#ROW1  {background-color:#dddddd;}
-table tr#ROW2  {background-color:#dddddd;}
-table tr#ROW3  {background-color:#dddddd;}
-table tr#ROW4  {background-color:#dddddd;}
-table tr#ROW5  {background-color:#dddddd;}
-table tr#ROW6  {background-color:#dddddd;}
-table tr#ROW7  {background-color:#F7A33B;}
-table tr#des  {font-size:0.7em;}
-div#info1  {background-color:#F2EE79;}
-div#info2  {background-color:#F2EE79;}
-div#info3  {background-color:#F2EE79;}
-div#info4  {background-color:#F2EE79;}
-
-#overlay {
-  position: fixed;
-  width: 100%; 
-  height: 100%; 
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color:#000000; 
-  z-index: 2; 
-  cursor: pointer; 
-  font-size: 1.7em;
-  color:#dddddd;
-}
-#overlay1 {
-  position: fixed;
-  width: 100%; 
-  height: 100%; 
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color:#000000; 
-  z-index: 2; 
-  cursor: pointer; 
-  font-size: 1.7em;
-  color:#dddddd;
-}
-input[type=password] {
-  width: 20%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;
-  font-size:15px;
-}
-.username{width: 20%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  display: inline-block;
-  border: 1px solid #ccc;
-  box-sizing: border-box;}
-.greenfield {background-color: #00A146;}
-.yellowfield {background-color: #EEF52C;}
-.redfield {background-color: #F71302;}
-.grayfield {background-color:#dddddd;}
-.orangefield {background-color:#fc7f03;}
-.bluefield {background-color:#0202fa;}
-.purplefield {background-color:#e605ff;}
-.torqfield {background-color:#05ffd1;}
-.limegreenfield {background-color:#82ff05;}
-.pinkfield {background-color:#ff8cea;}
-.peachfield {background-color:#f0c3a3;}
-.button {font-size: 40px;}
-.submitbutton {font-size: 40px;
-padding: 15px 32px;
-background-color: #00A146;
-}
-.buttontext {font-size:0.4em;}
-input.largerCheckbox
-{
-width: 30px;
-height: 30px;
-}
-
-.popup .show {
-  visibility: visible;
-  -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s;
-}
-
-#frame {
- width: 420px;
- height: 150px; 
- overflow:hidden;
- position:relative;
-}
-#bottomframe {
- width: 400px;
- height: 100px;
- position:absolute;
- top:53px;
- left:11px;
- background-color:#F2EE79;
-}
-#leftframe {
- width: 45px;
- height: 150px;
- position:absolute;
- top:3px;
- left:10px;
- background-color:#F2EE79;
-}
-#rightframe {
- width: 14px;
- height: 150px;
- position:absolute;
- top:3px;
- right:10px;
- background-color:#F2EE79;
-}
-#topframe {
- width: 420px;
- height: 26px;
- position:absolute;
- top:0px;
- background-color:#F2EE79;
-}
-
-.sidepanel  {
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  height: 250px;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidepanel a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidepanel a:hover {
-  color: #f1f1f1;
-}
-
-.sidepanel .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-}
-
-.openbtn {
-  font-size: 20px;
-  cursor: pointer;
-  background-color: #111;
-  color: white;
-  padding: 10px 15px;
-  border: none;
-}
-
-.openbtn:hover {
-  background-color:#444;
-}
-</style>
-
 
    <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -396,12 +169,32 @@ return o;
 <script>
 function authentication(){
 if ((document.getElementById("uname").value == "jeffchapman") && 
-   (document.getElementById("psw").value == "manitoba"))
+   (document.getElementById("psw").value == "manitoba")){
    document.getElementById("overlay").style.display = "none";
-   else {
-  alert("Please enter valid credentials.");
-}
-
+   }
+else if ((document.getElementById("uname").value == "Jeffchapman") &&
+          (document.getElementById("psw").value == "manitoba")){
+          document.getElementById("overlay").style.display = "none";
+          }
+else if ((document.getElementById("uname").value == "daveclarck") &&
+          (document.getElementById("psw").value == "manitoba")){
+          document.getElementById("overlay").style.display = "none";
+          }
+else if ((document.getElementById("uname").value == "Daveclarck") &&
+          (document.getElementById("psw").value == "manitoba")){
+          document.getElementById("overlay").style.display = "none";
+          }
+else if ((document.getElementById("uname").value == "samboyce") &&
+          (document.getElementById("psw").value == "manitoba")){
+          document.getElementById("overlay").style.display = "none";
+          }
+else if ((document.getElementById("uname").value == "Samboyce") &&
+          (document.getElementById("psw").value == "manitoba")){
+          document.getElementById("overlay").style.display = "none";
+          }
+else {
+          alert("Please enter valid credentials.");
+        }
 }
 </script>
 
@@ -486,12 +279,17 @@ Slips/Trips/Falls: This Site has many floor fixtures in/around the station jigs.
 </b><br><br>
 </label>
 
-      </div></div>
+</div>
+</div>
+
+</center>
 
 
 <form id="jobnoform">
-  <font size="8">Job Number: <input class="buttontext" id="jobnumber1" name="jobnumber1" type="text" style="font-size:35px;height:70px;"/></font><br><br>
+<center>
+    <font size="8">Job Number: <input class="buttontext" id="jobnumber1" name="jobnumber1" type="text" style="font-size:35px;height:70px;"/></font><br><br>
   <button class="button" style="font-size:40px;background-color:green;" id="myBtn1" type="button" onclick="hidejobnum();accessegress();showconfirmjobnumber();">Enter Job Number</button>
+</center>
   <script>
 var $formx = $('form#jobnoform'),
     urlx = 'https://script.google.com/macros/s/AKfycbz1qS-OkwqICk1WpH0I9BSEuw2kLxxIqVrhv_SZ8jchYcPWz-rw/exec',
@@ -511,7 +309,7 @@ $submitx = $('#myBtn1').on('click', function(e) {
   </form>
 
 <div id="confirmjobnumber" style="display:none">
-
+<center>
  <h2 style="font-size:43px;">
  Confirm job number entry</h2>
  <input style="font-size:35px;" type=text id="jobnumbertext" disabled>
@@ -520,6 +318,8 @@ $submitx = $('#myBtn1').on('click', function(e) {
  <button class="button" id="myBtn3" onclick="backjobnum();" style="font-size:40px;" type="button">
  Back
  </button>
+ 
+</center>
 
 </div>
 
@@ -549,5 +349,6 @@ function update() {
   $("#jobnumbertext").val($('#jobnumber1').val());
   }
   </script>
+
 
 </html>
